# todo

./: .editorconfig  .env.dist  .flake8  .gitattributes  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SQL.md  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
todo/: manage.py
todo/core/: apps.py  middleware.py  mixins.py  urls.py  views.py
todo/core/templatetags/: icons.py  modal.py
todo/core/utils/: htmx.py  modal.py
todo/project/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
todo/project/utils/: modal.py
todo/static/css/: styles.css
todo/static/js/: modal.js  tasks.js
todo/tasks/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
todo/tasks/migrations/: 0001_initial.py  0002_alter_task_options.py
todo/tasks/templates/tasks/project/: create_modal.html  delete_modal.html  item.html  list.html  update_modal.html
todo/tasks/templates/tasks/task/: create_form.html  delete_modal.html  form.html  item.html  update_modal.html
todo/tasks/views/: projects.py  tasks.py
todo/templates/: base.html
todo/templates/account/: card.html  login.html  logout.html  signup.html
todo/templates/includes/: header.html
todo/templates/layouts/: center.html  default.html
todo/templates/modal/: base.html  container.html
